<resources>
    <string name="app_name">Vineyard_IoT</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">Temperature: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>
    <string name="sunlight">Sunlight: </string>
    <string name="rainfall">Rainfall: </string>
    <string name="wind">Wind: </string>
    <string name="light_level">Light level:</string>
    <string name="carbon_dioxide">Carbon Dioxide: </string>
    <string name="PH">PH: </string>
    <string name="sulfur">Sulfur: </string>
    <string name="alcohol">Alcohol/Sugar: </string>
    <string name="density">Density: </string>
    <string name="color">"Color: "</string>
    <string name="transparency">"Transparency: "</string>
</resources>