<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WineBarrelFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/temperature"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temperature3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/temperature"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pressure"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pressure3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/pressure"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="120dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/carbon_dioxide"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carbon_dioxide3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/carbon_dioxide"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="180dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/PH"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ph3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ph"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="240dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sulfur"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sulfur3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/sulfur"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="300dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/humidity"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humidity3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/humidity"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="360dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/density"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/density3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/density"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="420dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/color"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/color3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/color"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="480dp"
        android:background="@color/barrel_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/transparency"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transparency3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/transparency"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="540dp"
        android:background="@color/barrel_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/alcohol"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alcohol3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/alcohol" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="600dp">

    </LinearLayout>




</RelativeLayout>